messageviewer/autotests/objecttreeparsertest.h
@@ -35,6 +35,7 @@ private Q_SLOTS:
     void test_parsePlainMessage();
     void test_missingContentTypeHeader();
     void test_inlinePGPDecryption();
+    void test_inlinePGPSigned();
     void test_HTML();
     void test_HTMLOnly();
 };
